--- a/backend/Backend/appsettings.Development.json
+++ b/backend/Backend/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "StorageSettings": {
+    "RootDir": "__data"
   }
 }
