--- a/backend/Backend/appsettings.json
+++ b/backend/Backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "RootDir": "__data"
+  }
 }
