--- a/backend/Backend/Properties/launchSettings.json
+++ b/backend/Backend/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "",
-      "applicationUrl": "http://localhost:5099",
+      "applicationUrl": "http://*:5099",
     },
     "https": {
       "commandName": "Project",
