--- a/backend/Backend/appsettings.Development.json
+++ b/backend/Backend/appsettings.Development.json
@@ -6,6 +6,8 @@
     }
   },
   "AppSettings": {
-    "RootDir": "__data"
+    "RootDir": "__data",
+    "DBConnection": "mongodb://app:H47Kfrg3G@localhost:27017/quiz-db",
+    "DBName": "quiz-db"
   }
 }
